  * fix-test-root.patch: remove superuser checks to be able to test under
    fakeroot.
  * fix-doc-version.patch: use "0.8.3p1" as version string in all documents.
  * fix-makeinfo-args.patch: move makeinfo scripting from debian/rules to
    separate patch which sets makeinfo arguments as for 0.7.12 package.
  * fix-info-dir.patch: backport doc patches from 0.7.12 package.

 -- Andriy Senkovych <jolly_roger@itblog.org.ua>  Tue, 08 Mar 2011 23:29:44 +0200

buildbot (0.7.12-2) unstable; urgency=low

  * Call setup.py install using --install-layout=deb. Closes: #569278.

 -- Matthias Klose <doko@debian.org>  Sun, 28 Feb 2010 04:48:48 +0100

buildbot (0.7.12-1) unstable; urgency=low

  * New upstream version.
  * Recommend python-twisted-mail, python-twisted-web instead of depending
    on it. Only the server does depend on these packages. Closes: #565993.
  * Add manual page for buildbot (Iustin Pop). Closes: #554531.

 -- Matthias Klose <doko@debian.org>  Wed, 27 Jan 2010 15:04:26 +0100

buildbot (0.7.11p3-1) unstable; urgency=low

  * New upstream version.
    - Fix CVE-2009-2959[0], cross-site scripting (XSS) vulnerability.
      Closes: #543822.
    - Fix buildbot serving CSS as text/plain, breaking styling in Firefox.
      Closes: #517267.
  * Fixed in 0.7.10: test output flooded in waterfall display.
    Closes: #512770.
  * Fix /etc/init.d/buildbot reload crashing buildslaves (Petr Rockai).
    Closes: #503288.
  * Fix some lintian warnings.

 -- Matthias Klose <doko@debian.org>  Thu, 27 Aug 2009 08:23:06 +0200

buildbot (0.7.10p1-1) unstable; urgency=low

  * New upstream version.

 -- Matthias Klose <doko@debian.org>  Thu, 19 Mar 2009 19:50:33 +0100

buildbot (0.7.9-1) unstable; urgency=low

  * New upstream version.
  * Suggest supported version control systems. Closes: #496539.

 -- Matthias Klose <doko@debian.org>  Tue, 23 Sep 2008 16:58:12 +0200

buildbot (0.7.8-1) unstable; urgency=low

  * New upstream version.
